# rust-overlaps

./: Cargo.toml  README.md
src/: main.rs  prepare.rs  search.rs  setup.rs  structs.rs  testing.rs  useful.rs  verification.rs
src/modes/: kucherov.rs  mod.rs  valimaki.rs
