[package]
name = "rust-overlaps"
version = "0.2.0"
authors = [
    "sirkibsirkib <christopher.esterhuyse@gmail.com>",
    "huangjj27 <huangjj.27@qq.com"
]
edition = "2018"

[dependencies]
bio = "0.13.0"
rand = "0.7"
clap = "2.24.1"
bidir-map = "0.3.2"
csv = "1.1.3"
cue = "0.1.0"
num_cpus = "1.4.0"
stacker = "0.1.2"
